--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 ><span class="d-none">Dhruv Khurana</span>
                 <span class="d-none"></span><span class="d-block"><img class="img-responsive img-fluid border-white rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span></a>
                     <h2 class="mb-1">Dhruv <span class="text-white">Khurana</span></h2>
-                <p class="d-block lead text-white mb-1">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                <p class="d-block text-white mb-1">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                 </div>
             </section>
             <hr class="m-0" />
