--- a/index.html
+++ b/index.html
@@ -204,5 +204,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <div style="display: none">
+    <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">  </script></div>
     </body>
 </html>
