--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
         </nav>
         <!-- Page Content-->
         <div class="container-fluid p-0">
+            <hr class="m-0" />
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                 	<a class="navbar-brand js-scroll-trigger" href="#page-top"
                 ><span class="d-none">Dhruv Khurana</span>
-                <span class="d-none"></span><span class="d-block"><img class="img-responsive img-fluid border-white rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span></a>
+                <span class="d-none"></span><span class="d-block"><img class="img-responsive img-fluid border-white rounded-circle mx-auto" src="assets/img/profile.jpg" alt="" /></span></a>
                     <h2 class="mb-1">Dhruv <span class="text-white">Khurana</span></h2>
                 <p class="d-block text-white mb-1">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                 </div>
