--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Dhruv Khurana - Resume</title>
@@ -17,7 +17,7 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar border border-dark navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+        <nav class="d-block navbar border border-dark navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top"
                 ><span class="d-block d-lg-none">Dhruv Khurana</span>
                 <span class="d-none d-lg-block"></span></a
