--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Dhruv Khurana - Resume</title>
@@ -125,7 +125,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading text-white mb-3">Programming Languages & Tools</div>
-                    <ul class="d-block list-inline dev-icons">
+                    <ul class="list-inline dev-icons">
                     	<a class="navbar-brand js-scroll-trigger" href="#skills">
                         <li class="list-inline-item"><img class="img-thumbnail img-responsive" src="assets/img/cpp.jpg"></li>
                         <li class="list-inline-item"><img class="img-thumbnail img-responsive" src="assets/img/python.jpg"></li>
