--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
@@ -43,7 +44,7 @@
                 ><span class="d-none">Dhruv Khurana</span>
                 <span class="d-none"></span><span class="d-block"><img class="img-responsive img-fluid border-white rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span></a>
                     <h2 class="mb-1">Dhruv <span class="text-white">Khurana</span></h2>
-                <p class="d-block text-white mb-1">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                <p class="d-block text-white mb-1">I am a programmer proficient in languages like C++ and Python. Problem solving, data structures and algorithms are some of my specialties. I'm also interested in Machine Learning.</p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -53,36 +54,26 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading text-white mb-3">Intelitec Solutions</div>
-                            <p class="text-white">Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Innovation Coordinator</h3>
+                            <div class="subheading text-white mb-3">Institution's Innovation Council - Amity University</div>
+                            <p class="text-white">Institution's Innovation Council (IIC) under MHRD’s Innovation Cell</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-white">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-white">August 2019 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading text-white mb-3">Intelitec Solutions</div>
-                            <p class="text-white">Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Contributor</h3>
+                            <div class="subheading text-white mb-3">Stack Overflow</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-white">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-white">April 2020 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading text-white mb-3">Shout! Media Productions</div>
-                            <p class="text-white">Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">Student Member</h3>
+                            <div class="subheading text-white mb-3">IEEE Delhi Section & IEEE Computer Society</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-white">July 2010 - December 2011</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading text-white mb-3">Shout! Media Productions</div>
-                            <p class="text-white">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-white">September 2008 - June 2010</span></div>
-                    </div>
+                        <div class="flex-shrink-0"><span class="text-white">May 2020 - Present</span></div>
+                    </div>                    
                 </div>
             </section>
             <hr class="m-0" />
