--- a/index.html
+++ b/index.html
@@ -83,20 +83,20 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading text-white mb-3">Bachelor of Science</div>
-                            <div class="text-white">Computer Science - Web Development Track</div>
-                            <p class="text-white">GPA: 3.23</p>
+                            <h3 class="mb-0">Amity School of Engineering & Technology, Noida</h3>
+                            <div class="subheading text-white mb-3">Bachelor of Technology</div>
+                            <div class="text-white">Computer Science & Engineering</div>
+                            <p class="text-white">CGPA: 8.81 & Current SGPA: 9.27</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-white">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-white">2018 - 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading text-white mb-3">Technology Magnet Program</div>
-                            <p class="text-white">GPA: 3.56</p>
+                            <h3 class="mb-0">The Air Force School, Subroto Park</h3>
+                            <div class="subheading text-white mb-3">Science with CS</div>
+                            <p class="text-white">Percentage: 93.6</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-white">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-white">2013 - 2017</span></div>
                     </div>
                 </div>
             </section>
