--- a/index.html
+++ b/index.html
@@ -101,6 +101,25 @@
                 </div>
             </section>
             <hr class="m-0" />
+            <!-- Projects-->
+            <section class="resume-section" id="projects">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Projects</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">MedPred - Personalized Drug Prediction App</h3>
+                            <p class="text-white">This GUI app was developed in Python. Once trained on a dataset, it can predict a suitable drug for a patient by taking personalized clinical parameters like age, sex, blood pressure, etc. Users can either use inbuilt dataset or import custom datasets for new disease predictions.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-white">Apr 2020</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">                           
+                            <p class="text-white">Check out these projects on my GitHub profile.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
