--- a/index.html
+++ b/index.html
@@ -130,10 +130,13 @@
                         <li class="list-inline-item"><img class="img-thumbnail img-responsive" src="assets/img/cpp.jpg"></li>
                         <li class="list-inline-item"><img class="img-thumbnail img-responsive" src="assets/img/python.jpg"></li>
                         <li class="list-inline-item"><img class="img-thumbnail img-responsive" src="assets/img/java.jpg"></li>
-                        <li class="list-inline-item"><img class="img-thumbnail img-responsive" src="assets/img/html.jpg"></li>
+                        <li class="list-inline-item"><img class="img-thumbnail img-responsive" src="assets/img/html.jpg"></li></a>                       
+                    </ul>
+                    <ul class="list-inline dev-icons">
+                         <a class="navbar-brand js-scroll-trigger" href="#skills">
                         <li class="list-inline-item"><img class="img-thumbnail img-responsive" src="assets/img/ibm.jpg"></li>
                         <li class="list-inline-item"><img class="img-thumbnail img-responsive" src="assets/img/scikit.jpg"></li>
-                        <li class="list-inline-item"><img class="img-thumbnail img-responsive" src="assets/img/mysql.jpg"></li> </a>                       
+                        <li class="list-inline-item"><img class="img-thumbnail img-responsive" src="assets/img/mysql.jpg"></li></a> 
                     </ul>
                     <ul class="fa-ul text-white mb-0">
                         <li>
