--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Dhruv Khurana</title>
+        <title>Dhruv Khurana - Resume</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -42,9 +42,9 @@
                 <div class="resume-section-content">
                 	<a class="navbar-brand js-scroll-trigger" href="#page-top"
                 ><span class="d-none">Dhruv Khurana</span>
-                <span class="d-none"></span><span class="d-block"><img class="img-responsive img-fluid border-white rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span></a>
+                <span class="d-none"></span><span class="d-block"><img class="img-responsive img-fluid border-white rounded-circle mx-auto" src="assets/img/profile.jpg" alt="" /></span></a>
                     <h2 class="mb-1">Dhruv <span class="text-white">Khurana</span></h2>
-                <p class="d-block text-white mb-1">I am a programmer proficient in languages like C++ and Python. Problem solving, data structures and algorithms are some of my specialties. I'm also interested in Machine Learning.</p>
+                <p class="lead text-white mb-6">I am a programmer proficient in languages like C++ and Python. Problem solving, data structures and algorithms are some of my specialties. I'm also interested in Machine Learning.</p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -119,7 +119,7 @@
                     </div>
                 </div>
             </section>
-            <hr class="m-0" />
+             <hr class="m-0" />
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
@@ -156,8 +156,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p class="text-white">Apart from being a coder, I enjoy being outdoors. When forced indoors, I like reading the latest technology trends and watching online movies and television shows. My hobbies also include singing and listening to music.</p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -165,27 +164,23 @@
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Awards & Certifications</h2>
-                    <ul class="fa-ul mb-0">
+                    <ul class="text-white fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>Google Analytics Certified Developer
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>Qualified the first round of Indian Engineering Olympiad (IEO) 2018.
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>Mobile Web Specialist - Google Certification
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>Earned a gold medal in the 17th National Science Olympiad (NSO) in class 10 with a school rank 1, state rank 98 and international rank 286.
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>1<sup>st </sup>Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>Completed the Coursera specialization - ‘AI Foundations for Everyone’ by IBM  
+                        </li>
+                        
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>Completed the Coursera specialization - ‘Python for Everybody’ by University of Michigan 
+
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>1<sup>st </sup>Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>2<sup>nd </sup>Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>1<sup>st </sup>Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>3<sup>rd </sup>Place - James Buchanan High School - Hackathon 2005
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>Completed several courses on Machine Learning & Data Visualization with Python
                         </li>
                     </ul>
                 </div>
@@ -194,10 +189,13 @@
             <!-- Contact me-->
             <section class="resume-section" id="contactme">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Contact me</h2>
-                    <div class="subheading mb-5">Naraina Vihar · New Delhi, India 110028 · +91 9868082695 · <a href="mailto:dhruvkhuranag156@gmail.com">dhruvkhuranag156@gmail.com</a></div>
+                    <h2 class="mb-5">My Contact Info</h2>
+                    <div class="subheading text-white mb-5"><i class="fas fa-home"></i><span class="ml-3">Naraina Vihar · New Delhi, India 110028</span> </div> 
+                    <div class="subheading text-white mb-5"><i class="fas fa-phone"></i><span class="ml-3">+91 9868082695</span></div>
+                    <div class="subheading text-white mb-5"><i class="fas fa-envelope"></i><span class="ml-3"><a class="text-white" href="mailto:dhruvkhuranag156@gmail.com"> 
+                    dhruvkhuranag156@gmail.com</a></span></div>
                     <div class="social-icons">
-                        <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="#"><i class="fab fa-github"></i></a><a class="social-icon" href="#"><i class="fab fa-twitter"></i></a><a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/dhruv156" target="_blank"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="https://github.com/DKg156" target="_blank"><i class="fab fa-github"></i></a><a class="social-icon" href="https://twitter.com/DhruvK156" target="_blank"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
             </section>
@@ -209,7 +207,5 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-        <div style="display: none">
-    <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">  </script></div>
     </body>
 </html>
