--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="A page about me" />
+        <meta name="author" content="Dhruv Khurana" />
+        <meta name="keywords" content="student, Computer Science, C++, Python">
         <title>Dhruv Khurana - Resume</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
