--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="A page about me" />
         <meta name="author" content="Dhruv Khurana" />
         <meta name="keywords" content="student, Computer Science, C++, Python">
-        <title>Dhruv Khurana - Resume</title>
+        <title>Dhruv Khurana - My Resume</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
