--- a/index.html
+++ b/index.html
@@ -184,6 +184,20 @@
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>Completed several courses on Machine Learning & Data Visualization with Python
                         </li>
                     </ul>
+                    </br>
+                    <ul class="list-inline">
+                    <a href="https://www.youracclaim.com/badges/271e0c92-cf21-44ac-95b4-984230787d07">
+                    <li class="list-inline-item"><img class = "img-fluid border-0" src="assets/img/ai.png" height="450" width="200" align="left"></li></a>
+                    <a href="https://www.youracclaim.com/badges/6250edc2-43ee-4146-9a7f-972bbdf09d1b">
+                    <li class="list-inline-item"><img class = "img-fluid border-0" src="assets/img/ml-ibm.png" height="450" width="190" align="left"></li></a>
+                    </ul>
+
+                    <ul class="list-inline">
+                    <a href="https://www.youracclaim.com/badges/299df9ee-97ae-4614-817f-d59371b2dd91">
+                    <li class="list-inline-item"><img class = "img-fluid border-0" src="assets/img/data-visualization.png" height="450" width="190" align="left"></li></a>
+                    <a href="https://www.youracclaim.com/badges/f369eba6-31cd-4d28-9aab-f8af905f7e02">
+                    <li class="list-inline-item"><img class = "img-fluid border-0" src="assets/img/chatbot-building-essentials.png" height="450" width="190" align="left"></li></a>
+                    </ul>
                 </div>
             </section>
             <hr class="m-0" />
