--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p class="text-white">Apart from being a coder, I enjoy being outdoors. When forced indoors, I like reading the latest technology trends and watching online movies and television shows. My hobbies also include singing and listening to music.</p>
+                    <p class="text-white">Apart from being a coder, I enjoy being outdoors. When stuck indoors, I like reading the latest technology trends and watching online movies and television shows. My hobbies also include singing and listening to music.</p>
                 </div>
             </section>
             <hr class="m-0" />
