Added download button

--- a/index.html
+++ b/index.html
@@ -211,6 +211,9 @@
                     dhruvkhuranag156@gmail.com</a></span></div>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/dhruv156" target="_blank"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="https://github.com/DKg156" target="_blank"><i class="fab fa-github"></i></a><a class="social-icon" href="https://twitter.com/DhruvK156" target="_blank"><i class="fab fa-twitter"></i></a>
+                    </div><br><br>
+                    <div class="ml-5">
+                    <a href="assets/Resume.pdf"><button type="button" class="btn btn-success">Download my resume</button></a>
                     </div>
                     <br><br><p class="text-white" style="text-align:center">&copy 2020 Dhruv Khurana</p>
                 </div>
