--- a/index.html
+++ b/index.html
@@ -209,9 +209,12 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/dhruv156" target="_blank"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="https://github.com/DKg156" target="_blank"><i class="fab fa-github"></i></a><a class="social-icon" href="https://twitter.com/DhruvK156" target="_blank"><i class="fab fa-twitter"></i></a>
                     </div><br><br>
-                    <div class="ml-5">
+                    <div class="text-center">
                     <a href="assets/Resume.pdf"><button type="button" class="btn btn-success">Download my resume</button></a>
                     </div>
+                    <div class = text-left>
+                    <a href="#home" class="js-scroll-trigger btn-light btn-lg"><i class="fas fa-chevron-up"></i></a>
+                   </div>
                     <br><br><p class="text-white" style="text-align:center">&copy 2020 Dhruv Khurana</p>
                 </div>
             </section>
