--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
@@ -202,6 +203,7 @@
             <section class="resume-section" id="contactme">
                 <div class="resume-section-content">
                     <h2 class="mb-5">My Contact Info</h2>
+                    <p class="text-white">Please feel free to get in touch. You can also connect with me on LinkedIn.</p><br><br>
                     <div class="subheading text-white mb-5"><i class="fas fa-home"></i><span class="ml-3">Naraina Vihar · New Delhi, India 110028</span> </div> 
                     <div class="subheading text-white mb-5"><i class="fas fa-phone"></i><span class="ml-3">+91 9868082695</span></div>
                     <div class="subheading text-white mb-5"><i class="fas fa-envelope"></i><span class="ml-3"><a class="text-white" href="mailto:dhruvkhuranag156@gmail.com"> 
@@ -212,9 +214,13 @@
                     <div class="text-center">
                     <a href="assets/Resume.pdf"><button type="button" class="btn btn-success">Download my resume</button></a>
                     </div>
-                    <br><br><p class="text-white" style="text-align:center">&copy 2020 Dhruv Khurana</p>
+                    <br><br><br><br>
+                    <div class="text-center text-white">
+                       <p><b>Made with <i class="material-icons" style="color:red">favorite</i> in Delhi</b></p>
+                    </div>
                     <div class = text-left>
                     <a href="#home" class="js-scroll-trigger btn-light btn-lg"><i class="fas fa-chevron-up"></i></a>
+                    <p class="text-white" style="text-align:center">&copy 2020 Dhruv Khurana</p>
                    </div>
                 </div>
             </section>
