--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     dhruvkhuranag156@gmail.com</a></span></div>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/dhruv156" target="_blank"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="https://github.com/DKg156" target="_blank"><i class="fab fa-github"></i></a><a class="social-icon" href="https://twitter.com/DhruvK156" target="_blank"><i class="fab fa-twitter"></i></a>
-                    </div><br><br>
+                    </div><br><br><br>
                     <div class="text-center">
                     <a href="assets/Resume.pdf"><button type="button" class="btn btn-success"><i class="fa fa-download"></i><span class="ml-2">Download my Resume</span></button></a>
                     </div>
