--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">The Air Force School, Subroto Park</h3>
-                            <div class="subheading text-white mb-3">Science with CS</div>
+                            <div class="subheading text-white mb-3">PCM with CS</div>
                             <p class="text-white">Percentage: 93.6</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-white">2013 - 2017</span></div>
