--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
                     <div class = text-left>
                     <a href="#home" class="js-scroll-trigger btn-light btn-lg"><i class="fas fa-chevron-up"></i></a>
                     <p class="text-white" style="text-align:center">&copy 2020 Dhruv Khurana</p>
+                    <p class="text-white" style="text-align:center">Hosted on GitHub Pages</p>
                    </div>
                 </div>
             </section>
