--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
                     <a href="https://www.youracclaim.com/badges/f369eba6-31cd-4d28-9aab-f8af905f7e02">
                     <li class="list-inline-item"><img class = "img-fluid border-0" src="assets/img/chatbot-building-essentials.png" height="450" width="190" align="left"></li></a>
                     </ul>
+                <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="9535565b-76c8-4bf4-bc9d-b71835418efa" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
                 </div>
             </section>
             <hr class="m-0" />
