--- a/index.html
+++ b/index.html
@@ -218,12 +218,11 @@
                     </div>
                     <br><br><br><br>
                     <div class="text-center text-white">
-                       <p><b>Made with <i class="material-icons" style="color:red">favorite</i> in Delhi</b></p>
+                       <p><b>Hosted with <i class="material-icons" style="color:red">favorite</i> by <a href="https://pages.github.com/">GitHub Pages</a></b></p>
                     </div>
                     <div class = text-left>
                     <a href="#home" class="js-scroll-trigger btn-light btn-lg"><i class="fas fa-chevron-up"></i></a>
                     <p class="text-white" style="text-align:center">&copy 2020 Dhruv Khurana</p>
-                    <p class="text-white" style="text-align:center">Hosted on GitHub Pages</p>
                    </div>
                 </div>
             </section>
