--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     </div>
                     <br><br><br><br>
                     <div class="text-center text-white">
-                       <p><b>Hosted with <i class="material-icons" style="color:red">favorite</i> by <a href="https://pages.github.com/">GitHub Pages</a></b></p>
+                       <p><b>Hosted with <i class="material-icons" style="color:red">favorite</i> by <a class="text-white" href="https://pages.github.com/">GitHub Pages</a></b></p>
                     </div>
                     <div class = text-left>
                     <a href="#home" class="js-scroll-trigger btn-light btn-lg"><i class="fas fa-chevron-up"></i></a>
