--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </ul>
             </div>
         </nav>
-        <!-- Page Content-->
+   
         <div class="container-fluid p-0">
             <!-- Home-->
             <section class="resume-section" id="home">
@@ -159,7 +159,7 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Awards-->
+            <!-- Accomplishments-->
             <section class="resume-section" id="accomplishments">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Accomplishments</h2>
@@ -201,7 +201,7 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Contact me-->
+            <!-- Contact info-->
             <section class="resume-section" id="contactme">
                 <div class="resume-section-content">
                     <h2 class="mb-5">My Contact Info</h2>
@@ -227,7 +227,7 @@
                 </div>
             </section>
         </div>
-        <!-- JS-->
+        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
