--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 ><span class="d-none">Dhruv Khurana</span>
                 <span class="d-none"></span><span class="d-block"><img class="img-responsive img-fluid border-white rounded-circle mx-auto" src="assets/img/profile.jpg" alt="" /></span></a>
                     <h2 class="mb-1">Dhruv <span class="text-white">Khurana</span></h2>
-                    <p class="lead text-white mb-6">I'm a 3<sup>rd</sup> year CSE student proficient in languages like C++ and Python. Problem solving, data structures and algorithms are some of my specialties. I'm also interested in Machine Learning and Web Development.</p>
+                    <p class="lead text-white mb-6">I'm a final year CSE student proficient in languages like C++ and Python. Problem solving, data structures and algorithms are some of my specialties. I'm also interested in Machine Learning and Web Development.</p>
                 </div>
             </section>
             <hr class="m-0" />
