--- a/index.html
+++ b/index.html
@@ -53,25 +53,25 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Innovation Coordinator</h3>
-                            <div class="subheading text-white mb-3">Institution's Innovation Council - Amity University</div>
-                            <p class="text-white">Institution's Innovation Council (IIC) under MHRD’s Innovation Cell</p>
+                            <h3 class="mb-0">DevOps Intern</h3>
+                            <div class="subheading text-white mb-3">TO THE NEW</div>
+                            <p class="text-white">Managed AWS infrastructure on Terraform for the Invest India (Gov. of India) project.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-white">August 2019 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-white">June 2021 - August 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Contributor</h3>
-                            <div class="subheading text-white mb-3">Stack Overflow</div>
+                            <h3 class="mb-0">Summer Intern - Software Development</h3>
+                            <div class="subheading text-white mb-3">VEERSA TECHNOLOGIES</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-white">April 2020 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-white">May 2021 - June 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Student Member</h3>
-                            <div class="subheading text-white mb-3">IEEE Delhi Section & IEEE Computer Society</div>
+                            <h3 class="mb-0">Innovation Ambassador</h3>
+                            <div class="subheading text-white mb-3">MoE's Innovation Cell</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-white">May 2020 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-white">Oct 2020 - Present</span></div>
                     </div>                    
                 </div>
             </section>
@@ -113,7 +113,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">                           
-                            <p class="text-white">Check out these projects on my GitHub profile.</p>
+                            <p class="text-white"><a href="https://github.com/DKg156">Check out these projects on my GitHub profile.</a></p>
                         </div>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p class="text-white">Apart from being a coder, I enjoy being outdoors. When stuck indoors, I like reading the latest technology trends and watching online movies and television shows. My hobbies also include singing and listening to music.</p>
+                    <p class="text-white">Apart from being a CS enthusiast, I enjoy being outdoors. When stuck indoors, I like reading the latest technology trends and watching Sci-Fi television shows. My hobbies also include singing and listening to music.</p>
                 </div>
             </section>
             <hr class="m-0" />
