--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">                           
-                            <p class="text-white"><a href="https://github.com/DKg156">Check out these projects on my GitHub profile.</a></p>
+                            <a href="https://github.com/DKg156"><p class="text-white">Check out these projects on my GitHub profile.</p></a>
                         </div>
                     </div>
                 </div>
