--- a/index.html
+++ b/index.html
@@ -53,11 +53,19 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Student Intern</h3>
+                            <div class="subheading text-white mb-3">Nokia</div>
+                            <p class="text-white">Writing test cases and developing Java code for 4G/5G call charging in Nokia’s OCS</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-white">Nov 2021 - Jan 2022</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">DevOps Intern</h3>
                             <div class="subheading text-white mb-3">TO THE NEW</div>
                             <p class="text-white">Managed AWS infrastructure on Terraform for the Invest India (Gov. of India) project.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-white">June 2021 - August 2021</span></div>
+                        <div class="flex-shrink-0"><span class="text-white">June 2021 - Aug 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -65,13 +73,6 @@
                             <div class="subheading text-white mb-3">VEERSA TECHNOLOGIES</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-white">May 2021 - June 2021</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Innovation Ambassador</h3>
-                            <div class="subheading text-white mb-3">MoE's Innovation Cell</div>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-white">Oct 2020 - Present</span></div>
                     </div>                    
                 </div>
             </section>
