--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         <a class="social-icon" href="https://www.linkedin.com/in/dhruv156" target="_blank"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="https://github.com/DKg156" target="_blank"><i class="fab fa-github"></i></a>
                     </div><br><br><br>
                     <div class="text-center">
-                    <a href="assets/Resume.pdf" title="Resume - Dhruv Khurana"><button type="button" class="btn btn-success"><i class="fa fa-download"></i><span class="ml-2">Download my Resume</span></button></a>
+                    <a href="assets/Resume.pdf"><button type="button" class="btn btn-success"><i class="fa fa-download"></i><span class="ml-2">Download my Resume</span></button></a>
                     </div>
                     <br><br><br><br>
                     <div class="text-center text-white">
