--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 ><span class="d-none">Dhruv Khurana</span>
                 <span class="d-none"></span><span class="d-block"><img class="img-responsive img-fluid border-white rounded-circle mx-auto" src="assets/img/profile.jpg" alt="" /></span></a>
                     <h2 class="mb-1">Dhruv <span class="text-white">Khurana</span></h2>
-                    <p class="lead text-white mb-6">I'm a final year CSE student proficient in languages like C++ and Python. My interests include Machine Learning and Cloud Computing.</p>
+                    <p class="lead text-white mb-6">I'm a CSE student proficient in languages like C++, Java and Python. My interests include Machine Learning and Cloud Computing.</p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -86,7 +86,7 @@
                             <h3 class="mb-0">Amity School of Engineering & Technology, Noida</h3>
                             <div class="subheading text-white mb-3">Bachelor of Technology</div>
                             <div class="text-white">Computer Science & Engineering</div>
-                            <p class="text-white">CGPA: 8.96 & Current SGPA: 9.25</p>
+                            <p class="text-white">CGPA: 8.97</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-white">2018 - 2022</span></div>
                     </div>
