--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     <h2 class="mb-5">My Contact Info</h2>
                     <p class="text-white">Please feel free to get in touch. You can also connect with me on LinkedIn.</p><br><br>
                     <div class="subheading text-white mb-5"><i class="fas fa-home"></i><span class="ml-3">New Delhi, India</span> </div> 
-                    <div class="subheading text-white mb-5"><i class="fas fa-phone"></i><span class="ml-3">+91 98680 82695</span></div>
+                   <!-- <div class="subheading text-white mb-5"><i class="fas fa-phone"></i><span class="ml-3">+91 98680 82695</span></div>     -->
                     <div class="subheading text-white mb-5"><i class="fas fa-envelope"></i><span class="ml-3"><a class="text-white" href="mailto:dhruvkhuranag156@gmail.com"> 
                     dhruvkhuranag156@gmail.com</a></span></div>
                     <div class="social-icons">
